tests/typing/good/testfile-mutable-2.scala

class A { var x = 1; def m() { x = 2 } }
object Main { def main(args: Array[String]) { } }
