tests/typing/bad/testfile-var2-1.scala
class A { def m() : Boolean = { var x: Int = 0; return x } }

object Main { def main(args: Array[String]) { } }
